@@ -1,18 +1,19 @@
 package com.example.copilottest.user.domain;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.ToString;
 
 @AllArgsConstructor
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
-@Data
+@Getter
+@ToString
 public class User {
 
     private String id;
@@ -26,7 +27,7 @@ public class User {
     private IdList teamIds;
 
     public static User sample() {
-        return new User("myou", "유민", "http://test-profile.co.kr", List.of(Skill.sample(), Skill.sample2()), IdList.of("c-team"));
+        return new User("myou", "유민", "http://test-profile.co.kr", new ArrayList<>(Arrays.asList(Skill.sample(), Skill.sample2())), IdList.of("c-team"));
     }
 
     public static User sample2() {
@@ -34,13 +35,13 @@ public class User {
             "hong", // 사용자 아이디
             "홍길동", // 사용자 이름
             "http://test-profile.co.kr/hong", // 프로필 URL
-            List.of(Skill.sample(), Skill.sample2()), // 사용자 스킬
+            new ArrayList<>(Arrays.asList(Skill.sample(), Skill.sample2())), // 사용자 스킬
             IdList.of("t1", "t2", "t3") // 사용자가 속한 팀의 ID 리스트
         );
     }
 
     public static User sample(String userId) {
-        return new User(userId, userId, "http://test-profile.co.kr", List.of(Skill.sample(), Skill.sample2()), IdList.of("c-team"));
+        return new User(userId, userId, "http://test-profile.co.kr", new ArrayList<>(Arrays.asList(Skill.sample(), Skill.sample2())), IdList.of("c-team"));
     }
 
     public List<String> getAllSkillNames() {
